--- a/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
+++ b/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
@@ -153,7 +153,7 @@
     background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
     background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=' #{$top} ', endColorstr=' #{$bottom} ',GradientType=0 );*/ /* IE6-9 */
 }
 
 /*
@@ -170,6 +170,7 @@
 	width:1px;
 }
 //be careful with this
+//might not work in all versions of IE - TEST BEFORE USING!
 @mixin accesibleUnhide{
 	position: initial;
 	text-indent: initial;
