--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -37,3 +37,6 @@
 .icon-right-circled:before { content: '\e823'; } /* '' */
 .icon-left-circled:before { content: '\e824'; } /* '' */
 .icon-ok:before { content: '\e825'; } /* '' */
+.icon-feather:before { content: '\e826'; } /* '' */
+.icon-quote-left:before { content: '\e827'; } /* '' */
+.icon-quote-right:before { content: '\e828'; } /* '' */
