--- a/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
+++ b/sites/all/themes/wttoc/sass/abstractions/abstractions.scss
@@ -238,6 +238,31 @@
 		display:none;
 	}
 }
+@mixin fontelloAfter{
+	&:after{
+		//default icon
+		content:'\e81f';
+		//fontello
+		font-family: "fontello";
+		font-style: normal;
+		font-weight: normal;
+		speak: none;
+		display: inline-block;
+		text-decoration: inherit;
+		width: 1em;
+		margin-right: .2em;
+		text-align: center;
+		/* opacity: .8; */
+		font-variant: normal;
+		text-transform: none;
+		line-height: 1em;
+		margin-left: .2em;
+		/* font-size: 120%; */
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+	}
+}
 /*
  * Quick Box Wizard
  */
