--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -14,6 +14,7 @@
 @import "components/Views_All_BusinessesAndEvents";
 @import "components/Views_One_BusinessesAndEvents";
 @import "components/Views_Categories_Businesses_Events.scss";
+@import "components/Views_small_blocks_Blogs_news.scss";
 @import "components/Views_Unslider";
 @import "components/Views_Small_Blocks_Biz_Evs";
 
