--- a/sites/all/themes/wttoc/sass/components/Page_Home.scss
+++ b/sites/all/themes/wttoc/sass/components/Page_Home.scss
@@ -65,7 +65,8 @@ body.front{
 		}
 	}
 	//Small Block Blog and News, Border
-	.small_block_bn_blogs_news-container.block{
+	.small_block_bn_blogs-container.block,
+	.small_block_bn_news-container.block{
 		border-color: transparent;
 	}
 	//Main Form
