--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -17,6 +17,7 @@
 @import "components/Views_small_blocks_Blogs_news.scss";
 @import "components/Views_Unslider";
 @import "components/Views_Small_Blocks_Biz_Evs";
+@import "components/Views_All_BlogsAndNews";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
