--- a/sites/all/themes/wttoc/sass/components/Views_small_blocks_Blogs_news.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_small_blocks_Blogs_news.scss
@@ -88,4 +88,12 @@ $vsbBnFieldSideIconSize: 20px;
 			}
 		}
 	}
+	.view-footer .blognews_seeall{
+		@include buttonColorGRAYOnWrapperSmall;
+		float:right;
+		a{
+			text-decoration:none;
+		}
+	}
+	@include clearfix;
 }
