library fontello udpate

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -40,3 +40,5 @@
 .icon-feather:before { content: '\e826'; } /* '' */
 .icon-quote-left:before { content: '\e827'; } /* '' */
 .icon-quote-right:before { content: '\e828'; } /* '' */
+.icon-hourglass:before { content: '\e829'; } /* '' */
+.icon-newspaper:before { content: '\e82a'; } /* '' */
