--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?44388398');
-  src: url('../font/fontello.eot?44388398#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?44388398') format('woff'),
-       url('../font/fontello.ttf?44388398') format('truetype'),
-       url('../font/fontello.svg?44388398#fontello') format('svg');
+  src: url('../font/fontello.eot?2216418');
+  src: url('../font/fontello.eot?2216418#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?2216418') format('woff'),
+       url('../font/fontello.ttf?2216418') format('truetype'),
+       url('../font/fontello.svg?2216418#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?44388398#fontello') format('svg');
+    src: url('../font/fontello.svg?2216418#fontello') format('svg');
   }
 }
 */
@@ -95,3 +95,5 @@
 .icon-feather:before { content: '\e826'; } /* '' */
 .icon-quote-left:before { content: '\e827'; } /* '' */
 .icon-quote-right:before { content: '\e828'; } /* '' */
+.icon-hourglass:before { content: '\e829'; } /* '' */
+.icon-newspaper:before { content: '\e82a'; } /* '' */
